# FBGEMM

./: CMakeLists.txt
bench/: CMakeLists.txt  ConvUnifiedBenchmark.cc  GEMMsBenchmark.cc  gemm_pack.hpp
cmake/modules/: FindMKL.cmake
scripts/: build.sh  generate_fbgemm.py  generate_fbgemm_3d.py  run_conv.sh  run_gemm.sh
src/: GenerateKernel.h
